# taobao-publisher

./: .env  .gitignore  README.md  config.json  pyproject.toml
src/taobao_publisher/: __init__.py  main.py
src/taobao_publisher/core/: ai_processor.py  async_runner.py  browser_manager.py  csv_parser.py  taobao_publisher.py
src/taobao_publisher/ui/: __init__.py  main_window.py  styles.py
src/taobao_publisher/ui/frames/: __init__.py  ai_settings_frame.py  csv_frame.py  log_frame.py  publish_frame.py
src/taobao_publisher/utils/: config.py  logger.py
